# landfall

./: .gitignore  CLAUDE.md  README.md  landfall-prd.md  landfall-viz-prd.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: environment.md  phase1-plan.md  phase1-result.md  phase2-result.md  phase3-result.md  phase4-result.md  phase4b-result.md  phase5-result.md  phase6-result.md  phase8-result.md  v1.1-phase1-result.md  v1.1-phase2-result.md  v1.1-phase3-result.md  v1.1-phase4-result.md  v1.1-phase5-result.md  v1.2-phase1-result.md  v1.2-phase2-result.md  v1.3-phase1-result.md  v1.3-phase2-result.md  v1.3-phase3-result.md  v1.4-phase1-result.md  v1.5-phase3-result.md  week1-plan.md  week1-result.md  week2-result.md  week3-result.md  week4-result.md  week4b-result.md
evals/: e2_groundedness.py  e3_compiler.py  e3_dataset.json  rag_storm_date_cases.py
scripts/: ask_sitreps.py  build_gpw_substitute.py  plot_haiyan_track.py  plot_haiyan_wind.py  plot_impact_curves.py  plot_storm.py  prepare_hybrid_exposure_data.py  query_sitreps.py  run_counterfactual.py
src/landfall/: cli.py  export_viz.py  scenario.py  storms.py
src/landfall/exposure/: hybrid.py  litpop.py
src/landfall/hazard/: tracks.py  wind.py
src/landfall/impact/: engine.py  haiyan.py  municipality.py  timeseries.py
src/landfall/llm/: compiler.py  narrator.py  rag.py  rag_answer.py
tests/: test_engine_cache.py  test_export_viz.py  test_groundedness.py
viz/: README.md  index.html  package-lock.json  package.json  vite.config.ts
viz/src/: App.tsx  data.ts  geo.ts  styles.css  types.ts  wind.ts
(+35 files in other folders)
